Journée du 28 Aout 2018

--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
   <body>
-      <p>Posted by : The Best Team Pierre - Dominick</p>
-      <p>Contact information: <a href="mailto:best-team@example.com"> best-team@example.com </a>.</p>
+      <p>Posted by : L'équipe Pierre et Dominick</p>
+      <p>Contact information: <a href="mailto:team@example.com"> team@example.com </a>.</p>
   </body>
 </html>
