--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
   <body>
-      <p>Posted by : L'équipe Pierre et Dominick</p>
-      <p>Contact information: <a href="mailto:team@example.com"> team@example.com </a>.</p>
+      <p><h3>Posted by : L'équipe Pierre et Dominick</h3></p>
+      <p><h3>Contact information: <a href="mailto:team@example.com"> team@example.com </a>.</h3></p>
   </body>
 </html>
