--- a/WebContent/logo.html
+++ b/WebContent/logo.html
@@ -8,7 +8,7 @@
   	<div style="display: flex;">
         <div> <img src="images/simplon.png"> </div>
         <div> <h2 text-align=center;>Bibliothèque Simplon.co</h2> </div>
-        <div> <marquee dir="ltr"><h3><font style="color: navy;">Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon</font></h3></marquee> </div>
 	</div>
+	<marquee dir="ltr"><h3><font style="color: navy;">Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon</font></h3></marquee>
   </body>
 </html>
