Modification de livre.jsp

--- a/WebContent/logo.html
+++ b/WebContent/logo.html
@@ -7,7 +7,7 @@
   <body>
   	<div style="display: flex;">
         <div> <img src="images/simplon.png"> </div>
-        <div> <h2 text-align=center;>Bibliothèque Simplon.co</h2> </div>
+        <div> <h2 style="text-align=center;">Bibliothèque Simplon.co</h2> </div>
 	</div>
 	<marquee dir="ltr"><h3><font style="color: navy;">Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon</font></h3></marquee>
   </body>
