Modifications de logo.html

--- a/WebContent/logo.html
+++ b/WebContent/logo.html
@@ -6,9 +6,8 @@
 </head>
   <body>
   	<div style="display: flex;">
-        <div> <img src="images/simplon.png"> </div>
-        <div> <h2 style="text-align=center;">Bibliothèque Simplon.co</h2> </div>
+        <div> <img src="images/books.jpg" width=100% height=300> </div>
 	</div>
-	<marquee dir="ltr"><h3><font style="color: navy;">Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon, Bienvenue à la Bibliothèque Simplon</font></h3></marquee>
+	<marquee dir="ltr"><h3><font style="color: navy;">Bienvenue à la Bibliothèque Simplon,&nbsp;&nbsp;&nbsp;&nbsp;Bienvenue à la Bibliothèque Simplon,&nbsp;&nbsp;&nbsp;&nbsp;Bienvenue à la Bibliothèque Simplon,&nbsp;&nbsp;&nbsp;&nbsp;Bienvenue à la Bibliothèque Simplon,&nbsp;&nbsp;&nbsp;&nbsp;Bienvenue à la Bibliothèque Simplon</font></h3></marquee>
   </body>
 </html>
